<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_width="match_parent"
    android:layout_height="205dp"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/vacation_item_vacation_type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/ali_mama_fang"
                android:text="@string/example_vacation_type"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/vacation_item_state_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/ali_mama_fang"
                android:text="@string/example_vacation_status"
                android:textColor="@color/sensitive_green"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/vacation_item_vacation_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/ali_mama_fang"
            android:textColor="@color/deep_gray"
            android:gravity="center_vertical"
            android:textSize="40sp"
            android:text="@string/example_vacation_name"/>

        <TextView
            android:id="@+id/vacation_item_vacation_belong"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:fontFamily="@font/ali_mama_fang"
            android:textColor="@color/gray"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:text="@string/example_vacation_belong"/>

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="20dp">

            <TextView
                android:id="@+id/vacation_item_vacation_during_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/ali_mama_fang"
                android:gravity="center_horizontal|bottom"
                android:text="@string/example_vacation_during"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/vacation_item_tips_text_view"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/ali_mama_fang"
            android:textColor="@color/sensitive_green"
            android:text="@string/click_to_write"/>

    </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>