<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_background">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_activity_view_pager_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/trans_to_white_background" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:padding="3dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <RelativeLayout
                    android:id="@+id/main_activity_history_btn"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="3dp">

                    <ImageView
                        android:id="@+id/main_activity_history_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/menu_history" />

                    <TextView
                        android:id="@+id/main_activity_history_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="7dp"
                        android:fontFamily="@font/ali_mama_fang"
                        android:text="@string/navigation_history"
                        android:textColor="@color/activity_un_choose" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_activity_report_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:paddingBottom="3dp">

                <ImageView
                    android:id="@+id/main_activity_report_img"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo"
                    android:transitionName="LogoTrans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="7dp"
                    android:fontFamily="@font/ali_mama_fang"
                    android:text="@string/navigation_report"
                    android:textColor="@color/black" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <RelativeLayout
                    android:id="@+id/main_activity_mine_btn"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="3dp">

                    <ImageView
                        android:id="@+id/main_activity_mine_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/menu_mine" />

                    <TextView
                        android:id="@+id/main_activity_mine_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="7dp"
                        android:fontFamily="@font/ali_mama_fang"
                        android:text="@string/navigation_mine"
                        android:textColor="@color/activity_un_choose" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>